# root_painter

./: .gitignore  CLAUDE.md  LICENSE  README.md  build_custom_torch.sh  build_workstation_mac.sh  build_workstation_ubuntu_cuda128.sh  build_workstation_win.ps1  publish.sh  pyproject.toml  run_painter_from_src.md  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build_osx.yml  build_torch_wheel.yml  build_ubuntu.yml  build_ubuntu_20.yml  build_ubuntu_22.yml  build_windows.yml  build_workstation_macos.yml  build_workstation_ubuntu_cuda128.yml  build_workstation_windows.yml  codeql-analysis.yml  windows_server.yml
docs/: FAQ.md  RELEASE.md  cxr_lung_tutorial.md  diku_setup.md  mini_guide.md  server_setup_sshfs.md  windows_11_trainer_install.md
painter/: .pylint  Installer.nsi  README.md  compile.sh  dev_requirements.txt  install_fixes.py  make_installer.sh  make_software.sh  requirements.txt  run_pyinstaller.py  segment_folder.sh
painter/src/main/icons/: Icon.icns  create_icns.sh  export.py
painter/src/main/python/: about.py  assign_corrections.py  base_extract.py  controls_dialog.py  convert_seg.py  create_dataset.py  create_project.py  eccentricity.py  extract_comp.py  extract_count.py  extract_length.py  extract_metrics.py  extract_regions.py  file_utils.py  graphics_scene.py  (+26 more)
painter/tests/: test_extend_dataset.py  test_log_recovery.py  test_send_instruction.py
trainer/: MANIFEST.in  README.txt  __init__.py  data_utils.py  datasets.py  elastic.py  file_utils.py  im_utils.py  loss.py  main.py  metrics.py  model_utils.py  publish_requirements.txt  pyproject.toml  requirements.txt  requirements_base_no_torch.txt  requirements_torch_cu128.txt  requirements_torch_cu128_broad.txt  requirements_torch_cu128_win.txt  shuffle_buffer_demo.py  startup.py  test_model_utils.py  test_training.py  test_unet.py  test_utils.py  tests.py  trainer.py  unet.py  unetv2_idea.py
trainer/multi_epoch/: multi_epoch_loader.py
trainer/root_painter_trainer/: __init__.py  loss.py
trainer/src/: MobileSAMInference.py  __init__.py  datasets.py  loss.py  main.py  metrics.py  model_utils.py  startup.py  trainer.py
trainer/src/mobile_sam/: __init__.py  build_sam.py
trainer/src/mobile_sam/modeling/: __init__.py  sam.py  tiny_vit_sam.py
trainer/src/trainer/: im_utils.py  trainer.py
trainer/tests/: plot_metrics.py  plot_metrics7.py  readme.md  run_latest_plot.sh  test_instructions.py  test_loss.py  test_training.py  test_unet.py  test_utils.py  training_benchmarks.py
trainer/tests/astar_annotator/: annotator.py
trainer/tests/sim_benchmark/: .gitignore  DESIGN.md  benchmark.py  brush.py  cam_strokes.py  make_demo.py  make_video.py  measure_mouse_rate.py  method.md  preview.py  quick_check.py  sim_user.py  sim_user_cam.py  test_annotator.py  test_benchmark.py  test_brush.py  test_sim_user.py  video.py  viewer.py
trainer/tests/sim_benchmark/test_cases/: README.md
trainer/trainer/: startup.py  unet.py
